@@ -6,18 +6,18 @@
 
 #if defined(SD_HAVE_DLOPEN)
 static int
-loadso_func_dlopen (void *handle, const char *symbol, loadso_fp *func)
+loadso_function_dlopen (void *handle, const char *symbol, loadso_pointer_t *function)
 {
-  loadso_fp pointer;
+  loadso_pointer_t pointer;
   sd_ptr_uint address;
 
 /* subvert C99 object/function pointer <-> type rules... unfortunately */
 #if defined(SD_HAVE_DLFUNC)
-  pointer = (loadso_fp) dlfunc (handle, symbol);
+  pointer = (loadso_pointer_t) dlfunc (handle, symbol);
   address = 0;
 #else
   address = (sd_ptr_uint) dlsym (handle, symbol);
-  pointer = (loadso_fp) address;
+  pointer = (loadso_pointer_t) address;
 #endif
 
   if (pointer == NULL) {
@@ -25,20 +25,20 @@ loadso_func_dlopen (void *handle, const char *symbol, loadso_fp *func)
     return 0;
   }
 
-  *func = pointer;
+  *function = pointer;
   return 1;
 }
 #endif
 
 int
-loadso_func (void *handle, const char *symbol, loadso_fp *func)
+loadso_function (void *handle, const char *symbol, loadso_pointer_t *function)
 {
-  assert (handle != NULL);
-  assert (symbol != NULL);
-  assert (func   != NULL);
+  assert (handle   != NULL);
+  assert (symbol   != NULL);
+  assert (function != NULL);
 
 #if defined(SD_HAVE_DLOPEN)
-  return loadso_func_dlopen (handle, symbol, func);
+  return loadso_function_dlopen (handle, symbol, function);
 #endif
 
   loadso_set_error ("function not implemented on this platform");
